--- a/views/buyer/manageOrder.ejs
+++ b/views/buyer/manageOrder.ejs
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Manage Orders - Gyanibaba Store</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <<%- include('../partials/head', { title: "Gyanibaba Store Dashboard" }) %>
   <link href="/css/buyer/manageOrders.css" rel="stylesheet" />
   
 </head>
