--- a/views/buyer/profile.ejs
+++ b/views/buyer/profile.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
- 
+ <%- include('../partials/head', { title: "Gyanibaba Store Dashboard" }) %>
   <link rel="stylesheet" href="/css/buyer/profile.css">
 </head>
 <body>
