--- a/views/auth/adminlogin.ejs
+++ b/views/auth/adminlogin.ejs
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-    <<%- include('../partials/head', { title: "Gyanibaba Store Dashboard" }) %>
+    <%- include('../partials/head', { title: "Gyanibaba Store Dashboard" }) %>
   <link rel="stylesheet" href="/css/auth/adminlogin.css">
 </head>
 <body>
