--- a/views/admin/sellerdeals.ejs
+++ b/views/admin/sellerdeals.ejs
@@ -30,7 +30,9 @@
               <li><strong>Brand:</strong> <%= product.brand %></li>
               <li><strong>Variant:</strong> <%= product.variant %></li>
               <li><strong>Color:</strong> <%= product.color %></li>
-              <li><strong>Return:</strong> ₹<%= product.returnAmount %></li>
+              <li><strong>Return amount to buyer:</strong> ₹<%= product.returnAmount %></li>
+              <li><strong>Current Booking Amount:</strong> ₹<%= product.bookingAmountSeller === 0 ? product.returnAmount : product.bookingAmountSeller %></li>
+
               <li><strong>Status:</strong> 
                 <span class="badge px-3 py-1 rounded-pill fw-semibold 
                   <%= product.deal ? 'bg-success text-white' : 'bg-secondary text-white' %>">
